--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95e8a7">  <td>20/07/02 18:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@11392934]">doLogin</td> 
-  <td>main@602423811</td>   <td></td> </tr>
-<tr bgcolor="95e8a7">  <td>20/07/02 18:12:49</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@11392934]">doUserReg</td> 
-  <td>main@602423811</td>   <td></td> </tr>
-<tr bgcolor="8685fd">  <td>20/07/02 18:12:49</td>   <td>188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@17f9d882]">doUserReg</td> 
-  <td>main@602423811</td>   <td></td> </tr>
-<tr bgcolor="8685fd">  <td>20/07/02 18:12:49</td>   <td>207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@17f9d882]">thirdTest</td> 
-  <td>main@602423811</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>11</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>-56</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@7d0b7e3c]">doLogin</td> 
+  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@7d0b7e3c]">doUserReg</td> 
+  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>20/07/02 18:20:07</td>   <td>165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@d737b89]">fourthTest</td> 
+  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="a3f27a">  <td>20/07/02 18:20:07</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@7d0b7e3c]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="8685fd">  <td>20/07/02 18:20:07</td>   <td>127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@742ff096]">validateTitles</td> 
+  <td>main@1681920301</td>   <td></td> </tr>
 </table>
