--- a/test-output/old/Functional Suite/methods-not-run.html
+++ b/test-output/old/Functional Suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testcases.TestCase2.validateTitles</td></tr>
-<tr><td>testcases.TestCase3.fourthTest</td></tr>
+<tr><td>testcases.TestCase3.doLogin</td></tr>
+<tr><td>testcases.TestCase3.thirdTest</td></tr>
+<tr><td>testcases.TestCase3.doUserReg</td></tr>
 </table>
